@@ -38,6 +38,10 @@ INSP.NAME.section.multiline.string.args.message=Multiline string argument in ''{
 INSP.NAME.section.multiple.args=Only one argument is allowed for this section.
 INSP.NAME.section.multiple.args.message=Only one argument is allowed for ''{0}'' section.
 
+# SmkSectionUnspecifiedFieldArgsInspection
+INSP.NAME.section.unspecified.field.args=Section name is not specified
+INSP.NAME.section.unspecified.field.args.message=Expected section name or argument (e.g. ''rules.foo.input'' or ''rules.bar.output.arg1''), but ''{0}'' was found
+
 # SmkSectionDuplicatedArgsInspection
 INSP.NAME.section.duplicated.args=Duplicated argument
 INSP.NAME.section.duplicated.args.message=This argument has been already added to ''{0}'' section.
